# tiger-cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  regression.sh
docs/: architecture.md  index.md  overview.md  testing.md  tiger-language.md
scripts/: grade.sh
src/straightline/: prog1.cc  prog1.h  slp.cc  slp.h  test_slp.cc
src/tiger/absyn/: absyn.cc  absyn.h
src/tiger/canon/: canon.cc  canon.h
src/tiger/codegen/: assem.h  codegen.cc  codegen.h
src/tiger/env/: env.cc  env.h
src/tiger/errormsg/: errormsg.cc  errormsg.h
src/tiger/escape/: escape.cc  escape.h
src/tiger/frame/: arm64frame.cc  arm64frame.h  frame.h  target.cc  target.h  temp.cc  temp.h  x64frame.cc  x64frame.h
src/tiger/lex/: lex.yy.cc  scanner.h  tiger.lex
src/tiger/liveness/: flowgraph.cc  flowgraph.h  liveness.cc  liveness.h
src/tiger/main/: main.cc  test_codegen.cc  test_lex.cc  test_parse.cc  test_semant.cc  test_translate.cc
src/tiger/output/: output.cc  output.h
src/tiger/parse/: parse.tab.cc  parse.tab.hh  parser.h  tiger.y
src/tiger/regalloc/: color.h  regalloc.cc  regalloc.h
src/tiger/runtime/: runtime.c
src/tiger/semant/: semant.cc  semant.h  types.cc  types.h
src/tiger/symbol/: symbol.cc  symbol.h
src/tiger/translate/: translate.cc  translate.h  tree.h
src/tiger/util/: graph.h  table.h
testdata/: README.md
testdata/lab2/testcases/: test12.tig.s
